adminview: add Generar PDF simulado; remove create-case form; add logout; update data models